Fix layout issue

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 * {
-    /* outline: 2px solid yellow; */
     font-family: Roboto, sans-serif;
 }
 
@@ -11,14 +10,10 @@ body {
     margin: 0;
     padding: 0;
     font-family: Roboto, sans-serif;
-    /* overflow-x: hidden; */
-    /* width: fit-content; */
 }
 
 .hero-section {
     background-color: #1F2937;
-    /* max-width: fit-content; */
-    /* width: fit-content; */
 }
 
 li {
@@ -37,8 +32,7 @@ ul {
 
 .header {
     display: flex;
-    justify-content: space-around;
-    
+    justify-content: space-around;    
 }
 
 .three-horizontal-texts {
@@ -63,8 +57,6 @@ ul {
     gap: 0;
     padding: 0;
     margin: 100px;
-    max-width: 1000px;
-    min-width: 400px;
 }
 
 h2,
